# getbotBehavior

./: .gitignore  .gitmodules  README.md  all.groups  variables.groups
src/battery_pub/: CMakeLists.txt  package.xml
src/battery_pub/src/: battery_pub.cpp
src/battery_sub/: CMakeLists.txt  package.xml
src/battery_sub/src/: battery_sub.cpp
src/controller/: CMakeLists.txt  README.md  package.xml
src/controller/launch/: controller_launch.py
src/controller/pddl/: ObjHandling_Domain.pddl  domain_2.pddl  domain_objHandling copy.pddl  domain_objHandling.pddl
src/controller/src/: action_controller.cpp  approach_balls_action_node.cpp  approach_balls_target_action_node.cpp  ask_charge_action_node.cpp  charge_action_node.cpp  drop_balls_action_node.cpp  explore_action_node.cpp  explore_start_action_node.cpp  grab_balls_action_node.cpp  handle_balls_action_node.cpp  map_action_node.cpp  map_start_action_node.cpp  move_action_node.cpp  obj_detect_start_action_node.cpp  wander_action_node.cpp
src/rescue_robot/: CMakeLists.txt  Readme.md  package.xml
src/rescue_robot/launch/: rescue_controller.py
src/rescue_robot/pddl/: Background_Domain.pddl  Domain.pddl  Domain_updated.pddl  ObjHandling_Domain.pddl
src/rescue_robot/src/: charger_approach_action_node.cpp  map_start_action_node.cpp  obj_approach_action_node.cpp  target_approach_action_node.cpp
src/rescue_robot/src/background/: explore_start_action_node.cpp  obj_detect_start_action_node.cpp  wander_around_action_node.cpp
src/rescue_robot/src/battery/: battery_charge_1_action_node.cpp  charger_approach_action_node.cpp
src/rescue_robot/src/controllers/: controller_node.cpp  controllers_readme.md  navigation_controller.cpp  object_handling_controller.cpp
src/rescue_robot/src/navigation/: Navigation_Readme.md  destination_navigate_node.cpp  door_destination_navigate_node.cpp  door_open_action_node.cpp  elevator_approach_action_node.cpp  elevator_down_action_node.cpp  elevator_up_action_node.cpp  obj_approach_action_node.cpp  stairs_approach_action_node.cpp  stairs_down_action_node.cpp  stairs_up_action_node.cpp
src/rescue_robot/src/object_handling/: item_move_action_node.cpp  item_victim_drop_action_node.cpp  item_victim_grab_action_node.cpp  obj_approach_action_node.cpp  target_approach_action_node.cpp  victim_rescue_action_node.cpp
src/test/: CMakeLists.txt  multi-bot.md  package.xml
src/test/launch/: controller_launch.py
src/test/pddl/: domain_1.pddl
src/test/src/: action_controller.cpp  approach_items_action_node.cpp  approach_items_target_action_node.cpp  battery_charge_1_action_node.cpp  camera_active_action_node.cpp  charger_approach_action_node.cpp  controller_node.cpp  drop_items_action_node.cpp  grab_items_action_node.cpp  handle_items_action_node.cpp  wander_around_action_node.cpp
